// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxCollapse customize 1`] = `
<div>
  <div
    class="bazinga collapse"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxCollapse component 1`] = `
<div>
  <div
    class="collapse"
  >
    Test
  </div>
</div>
`;
